Fixed z-index of centered Panel.

--- a/modules/gui/frontend/src/widget/panel/panel.module.css
+++ b/modules/gui/frontend/src/widget/panel/panel.module.css
@@ -1,10 +1,12 @@
 .centerWrapper {
     position: relative;
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    z-index: 2;
 }
 
 .panel {
